RESOLVED FIXED102108
Missing NodeRenderStyle.h include in WebCore/html/TextFieldInputType.cpp
https://bugs.webkit.org/show_bug.cgi?id=102108
Summary Missing NodeRenderStyle.h include in WebCore/html/TextFieldInputType.cpp
Xianzhu Wang
Reported 2012-11-13 10:57:31 PST
Node::renderStyle() is declared in Node.h, defined as an inline function in NodeRenderStyle.h. TextFieldInputType.cpp doesn't include NodeRenderStyle.h but uses Node::renderStyle(). This causes link error on a Chromium bot (http://build.chromium.org/p/chromium.linux/builders/Android%20Clang%20Builder%20%28dbg%29/builds/1238/steps/compile/logs/stdio/text).
Attachments
Patch (1.17 KB, patch)
2012-11-13 11:24 PST, Xianzhu Wang
no flags
rebased (1.18 KB, patch)
2012-11-13 12:03 PST, Xianzhu Wang
no flags
Xianzhu Wang
Comment 1 2012-11-13 11:24:42 PST
Adam Barth
Comment 2 2012-11-13 11:41:49 PST
Comment on attachment 173932 [details] Patch ok
WebKit Review Bot
Comment 3 2012-11-13 11:57:02 PST
Comment on attachment 173932 [details] Patch Rejecting attachment 173932 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/14818667
Xianzhu Wang
Comment 4 2012-11-13 12:03:01 PST
Xianzhu Wang
Comment 5 2012-11-13 15:54:15 PST
Comment on attachment 173944 [details] rebased Clearing flags on attachment: 173944 Committed r134500: <http://trac.webkit.org/changeset/134500>
Xianzhu Wang
Comment 6 2012-11-13 15:54:17 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.